Cleaning up scss, fixing minor layout bugs, fixing console errors.

--- a/src/scss/_font.scss
+++ b/src/scss/_font.scss
@@ -1,8 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=PT+Sans:400,700|Raleway:300,400,500,600';
 
 body {
-  margin: 0;
-  padding: 0;  
   font-family: 'PT Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,8 +8,4 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Raleway', 'sans-serif';
-}
-
-.text-center {
-  text-align: center;
 }
